fix: width discount label on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -552,7 +552,7 @@ input[type=submit] {
   .price__discount--short {
     display: block;
     margin-left: 0;
-    width: fit-content;
+    width: 40px;
   }
 }
 
